--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "request": "^2.81.0"
+  },
+  "engines": {
+    "node": "4.1.1"
   }
 }
